CLIアプリケーション追加(#17)